--- a/public/styles.css
+++ b/public/styles.css
@@ -7,7 +7,14 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    
+}
+.container {
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 80%;
+    max-width: 1200px;
 }
 
 form {
@@ -16,6 +23,7 @@ form {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    width: 100%;
 }
 
 label {
@@ -91,3 +99,4 @@ h1 {
     font-weight: bold;
     margin-bottom: 20px;
 }
+
