--- a/public/styles.css
+++ b/public/styles.css
@@ -18,13 +18,12 @@ body {
 }
 
 form {
-    background: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    width: 300px; /* Adjust this value as needed */
+    margin: 0 auto;
 }
+
 
 label {
     display: block;
@@ -32,22 +31,17 @@ label {
     font-weight: bold;
 }
 
-input, select {
-    width: 50%;
+input, select, button {
+    width: 100%; /* Ensure full width of the form container */
     padding: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
 button {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
+    width: auto; /* Adjust width for button if needed */
+    align-self: center; /* Center the button */
 }
 
 button:hover {
